--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "moment-timezone": "^0.6.0",
-    "next": "15.5.4",
+    "next": "^16.0.10",
     "react": "19.1.0",
     "react-day-picker": "^9.11.0",
     "react-dom": "19.1.0",
